merchant has a pic now and a skip button

--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -98,6 +98,12 @@
 
     <!-- Encounter Modal -->
     <div class="modal-overlay" id="combatModal">
+        <!-- Merchant Portrait (Visual Novel Style) -->
+        <div id="merchantPortrait" style="display:none; position:absolute; left:20px; top:50%; transform:translateY(-50%); 
+             width:300px; height:450px; background-image:url('assets/images/visualnovel/merchant_front.png'); 
+             background-size:cover; background-position:center; z-index:1100; border-radius:8px; pointer-events:none;">
+        </div>
+
         <div class="combat-container" id="combatContainer">
             <div class="enemy-area" id="enemyArea">
                 <!-- Cards inject here -->
