--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -101,7 +101,8 @@
         <!-- Merchant Portrait (Visual Novel Style) -->
         <div id="merchantPortrait" style="display:none; position:absolute; left:20px; top:50%; transform:translateY(-50%); 
              width:300px; height:450px; background-image:url('assets/images/visualnovel/merchant_front.png'); 
-             background-size:cover; background-position:center; z-index:1100; border-radius:8px; pointer-events:none;">
+             background-size:cover; background-position:center; border:4px solid var(--gold); 
+             box-shadow:0 0 40px rgba(212, 175, 55, 0.6); z-index:10; border-radius:8px;">
         </div>
 
         <div class="combat-container" id="combatContainer">
