--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -78,6 +78,8 @@
     </div>
     <canvas id="fxCanvas"
         style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:5000;"></canvas>
+    <!-- UI FX Canvas: renders textured projectiles and particles above the modal UI -->
+    <canvas id="uiFxCanvas" style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:6500;"></canvas>
 
     <!-- Avatar Selection Modal -->
     <div class="avatar-modal" id="avatarModal" style="display: none;">
@@ -101,8 +103,7 @@
         <!-- Merchant Portrait (Visual Novel Style) -->
         <div id="merchantPortrait" style="display:none; position:absolute; left:20px; top:50%; transform:translateY(-50%); 
              width:300px; height:450px; background-image:url('assets/images/visualnovel/merchant_front.png'); 
-             background-size:cover; background-position:center; border:4px solid var(--gold); 
-             box-shadow:0 0 40px rgba(212, 175, 55, 0.6); z-index:10; border-radius:8px;">
+             background-size:cover; background-position:center; z-index:1100; border-radius:8px; pointer-events:none;">
         </div>
 
         <div class="combat-container" id="combatContainer">
