better player rest images used

--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -89,10 +89,10 @@
                 Choose Your Avatar</h2>
             <div class="avatar-options">
                 <div class="avatar-card" onclick="selectAvatar('m')">
-                    <div class="avatar-img" style="background-image: url('assets/images/rest_m.png')"></div>
+                    <div class="avatar-img" style="background-image: url('assets/images/rest_m_large.png')"></div>
                 </div>
                 <div class="avatar-card" onclick="selectAvatar('f')">
-                    <div class="avatar-img" style="background-image: url('assets/images/rest_f.png')"></div>
+                    <div class="avatar-img" style="background-image: url('assets/images/rest_f_large.png')"></div>
                 </div>
             </div>
         </div>
