--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -79,7 +79,8 @@
     <canvas id="fxCanvas"
         style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:5000;"></canvas>
     <!-- UI FX Canvas: renders textured projectiles and particles above the modal UI -->
-    <canvas id="uiFxCanvas" style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:99980;"></canvas>
+    <canvas id="uiFxCanvas"
+        style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:99980;"></canvas>
 
     <!-- Avatar Selection Modal -->
     <div class="avatar-modal" id="avatarModal" style="display: none;">
@@ -101,9 +102,23 @@
     <!-- Encounter Modal -->
     <div class="modal-overlay" id="combatModal">
         <!-- Merchant Portrait (Visual Novel Style) -->
-        <div id="merchantPortrait" style="display:none; position:absolute; left:20px; top:50%; transform:translateY(-50%); 
+        <!-- <div id="merchantPortrait" style="display:none; position:absolute; left:20px; top:50%; transform:translateY(-50%); 
              width:300px; height:450px; background-image:url('assets/images/visualnovel/merchant_front.png'); 
              background-size:cover; background-position:center; z-index:1100; border-radius:8px; pointer-events:none;">
+        </div> -->
+
+        <div id="merchantPortrait" style="display:none; position:absolute; 
+     left: clamp(10px, 2vw, 32px); 
+     top: 50%; 
+     transform: translateY(-50%); 
+     width: clamp(200px, 20vw, 300px); 
+     height: clamp(300px, 30vw, 450px); 
+     background-image: url('assets/images/visualnovel/merchant_front.png'); 
+     background-size: cover; 
+     background-position: center; 
+     z-index: 1100; 
+     border-radius: 8px; 
+     pointer-events: none;">
         </div>
 
         <div class="combat-container" id="combatContainer">
