feat: Redesign combat UI layout with dedicated sections for stats, inventory, and trophies, and add a slot property to armor data.

--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -108,67 +108,97 @@
             </div>
 
             <div class="player-combat-area">
-                <div style="flex-grow: 1;">
+                <!-- Segment 1: Consolidated Stats Area -->
+                <div class="combat-segment-stats">
                     <div class="combat-message" id="combatMessage">Room Encounter! Pick 3 cards...</div>
-                    <div id="modalStats"
-                        style="margin-bottom: 20px; border-top: 1px solid rgba(212, 175, 55, 0.3); padding-top: 15px; display: flex; gap: 40px; align-items: flex-end;">
-                        <div style="width: 250px;">
-                            <div class="stat-label">Vitality</div>
-                            <div class="stat-value" id="hpValueModal" style="font-size: 2.2rem;">20</div>
-                            <div class="health-bar" style="height: 10px; margin-top: 5px;">
-                                <div class="health-fill" id="hpBarModal" style="width: 100%"></div>
+
+                    <div class="stat-subgrid">
+                        <!-- Col 1: Vitality & Meta -->
+                        <div class="stat-col vitality">
+                            <div class="stat-inline-header">
+                                <div class="stat-label">PROTAGONIST VITALITY</div>
+                                <div class="stat-label">FLOOR</div>
+                            </div>
+                            <div class="stat-main-values">
+                                <div class="stat-value" id="hpValueModal">20</div>
+                                <div class="stat-value" id="floorValueModal">1</div>
+                            </div>
+                            <div class="health-bar-container">
+                                <div class="health-fill" id="hpBarModal"></div>
+                            </div>
+                            <div class="stat-meta-row">
+                                <div>Cleared: <span id="progressValueModal" style="color:#fff;">2 / 12</span></div>
+                                <div>Deck: <span id="deckValueModal" style="color:#fff;">40</span></div>
                             </div>
                         </div>
-                        <div style="flex-grow: 1;">
-                            <div class="stat-label">Armament</div>
-                            <div style="display: flex; align-items: flex-end; width: 100%;">
-                                <div style="min-width: 200px; flex-shrink: 0;">
-                                    <div id="weaponNameModal" style="font-weight: 700; font-size: 1.2rem;">BARE HANDS
+
+                        <!-- Col 2: Armament -->
+                        <div class="stat-col armament">
+                            <div class="stat-label" style="margin-bottom: 5px;">MAIN ARMAMENT</div>
+                            <div class="weapon-info-row">
+                                <div id="weaponArtModal" class="weapon-art-combat"></div>
+                                <div class="weapon-text">
+                                    <div id="weaponNameModal" class="weapon-name">BARE HANDS</div>
+                                    <div id="weaponLastDealModal" class="weapon-detail">No limit</div>
+                                    <div class="soul-coins-modal">Soul Coins: <span id="soulCoinsValueModal">0</span>
                                     </div>
-                                    <div id="weaponLastDealModal"
-                                        style="font-size: 0.8rem; font-style: italic; opacity: 0.7;">No limit</div>
-                                </div>
-                                <div class="trophy-container" id="trophyShelf">
-                                    <!-- Mini slain cards here -->
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="btn-group">
+
+                    <!-- Action Buttons Grounded in Segment 1 -->
+                    <div class="btn-group" style="margin-top: 10px;">
                         <button class="v2-btn" id="modalAvoidBtn" disabled>TACTICAL RETREAT</button>
                         <button class="v2-btn" id="exitCombatBtn" style="display:none">CONTINUE ON</button>
                         <button class="v2-btn" id="descendBtn"
-                            style="display:none; background: var(--gold); color: #000;">DESCEND TO NEXT FLOOR</button>
-                        <button class="v2-btn" id="bonfireNotNowBtn"
-                            style="display:none; background:#555; color:#fff;">NOT NOW</button>
+                            style="display:none; background: var(--gold); color: #000;">DESCEND</button>
+                    </div>
+                </div>
+
+                <!-- Segment 2: Combat Inventory -->
+                <div class="combat-segment-inventory">
+                    <div class="stat-label" style="text-align:center; margin-bottom:5px;">Provisioning</div>
+                    <div id="combatInventory" class="combat-inventory-grid">
+                        <!-- Slots injected by JS -->
+                    </div>
+                </div>
+
+                <!-- Segment 3: Trophy Shelf -->
+                <div class="combat-segment-trophies">
+                    <div class="stat-label" style="text-align:center; margin-bottom:5px;">Spoils</div>
+                    <div class="trophy-container" id="trophyShelf">
+                        <!-- Mini slain cards here -->
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Bonfire UI -->
-        <div id="bonfireUI"
-            style="display:none; flex-direction:column; align-items:center; justify-content:center; width:calc(100% - 320px); height:100%; text-align:center;">
-            <h2
-                style="font-family:'Cinzel'; font-size:3rem; color:#ff6600; text-shadow:0 0 20px #ff4400; margin-bottom:20px;">
-                BONFIRE LIT</h2>
+    </div>
+    </div>
+    <!-- Bonfire UI -->
+    <div id="bonfireUI"
+        style="display:none; flex-direction:column; align-items:center; justify-content:center; width:calc(100% - 320px); height:100%; text-align:center;">
+        <h2
+            style="font-family:'Cinzel'; font-size:3rem; color:#ff6600; text-shadow:0 0 20px #ff4400; margin-bottom:20px;">
+            BONFIRE LIT</h2>
 
-            <!-- Avatar Rest Image -->
-            <div id="bonfireImage"
-                style="width:200px; height:300px; background-size:cover; background-position:center; border:4px solid #444; margin-bottom:20px; box-shadow:0 0 30px #ff4400;">
-            </div>
-
-            <div style="font-style:italic; margin-bottom:40px; color:#aaa;" id="bonfireStatus">Respite available.</div>
-            <div style="display:flex; flex-direction:column; gap:20px; width:300px; margin:0 auto;">
-                <button class="v2-btn" onclick="handleBonfire(1)" id="btnRest1">Light Rest (+5 HP) <span
-                        style="font-size:0.8em; opacity:0.7;">(1 cost)</span></button>
-                <button class="v2-btn" onclick="handleBonfire(2)" id="btnRest2">Deep Rest (+10 HP) <span
-                        style="font-size:0.8em; opacity:0.7;">(2 costs)</span></button>
-                <button class="v2-btn" onclick="handleBonfire(3)" id="btnRest3">Full Sleep (+15 HP) <span
-                        style="font-size:0.8em; opacity:0.7;">(3 costs)</span></button>
-                <button class="v2-btn" onclick="closeCombat()"
-                    style="background:#555; color:#fff; margin-top:20px;">Leave</button>
-            </div>
+        <!-- Avatar Rest Image -->
+        <div id="bonfireImage"
+            style="width:200px; height:300px; background-size:cover; background-position:center; border:4px solid #444; margin-bottom:20px; box-shadow:0 0 30px #ff4400;">
         </div>
+
+        <div style="font-style:italic; margin-bottom:40px; color:#aaa;" id="bonfireStatus">Respite available.</div>
+        <div style="display:flex; flex-direction:column; gap:20px; width:300px; margin:0 auto;">
+            <button class="v2-btn" onclick="handleBonfire(1)" id="btnRest1">Light Rest (+5 HP) <span
+                    style="font-size:0.8em; opacity:0.7;">(1 cost)</span></button>
+            <button class="v2-btn" onclick="handleBonfire(2)" id="btnRest2">Deep Rest (+10 HP) <span
+                    style="font-size:0.8em; opacity:0.7;">(2 costs)</span></button>
+            <button class="v2-btn" onclick="handleBonfire(3)" id="btnRest3">Full Sleep (+15 HP) <span
+                    style="font-size:0.8em; opacity:0.7;">(3 costs)</span></button>
+            <button class="v2-btn" id="bonfireNotNowBtn"
+                style="background:#555; color:#fff; margin-top:20px;">Leave</button>
+        </div>
+    </div>
     </div>
 
     <script type="module" src="scoundrel-3d.js"></script>
