minigame, spells, secret and trap rooms

--- a/scoundrel-3d.html
+++ b/scoundrel-3d.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Scoundrel: Gilded Depths</title>
+    <title>Gilded Depths</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Special+Elite&display=swap"
         rel="stylesheet">
@@ -26,7 +26,7 @@
 <body>
     <div class="sidebar">
         <div class="title-area">
-            <h2>SCOUNDREL:<br>GILDED DEPTHS</h2>
+            <img src="assets/images/logo.png" alt="Gilded Depths" style="width: 50%; height: auto; filter: drop-shadow(0 2px 4px #000);">
         </div>
 
         <div class="stat-block" id="sidebarStats" style="display: block;">
